remove potentially copyrighted graphic

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -57,7 +57,7 @@ In some cases, a moderate deviation from the average in melting temperature for 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=\textwidth]{img/popcode_schema.pdf}
-	\caption{POPCode mutagenesis and library generation. A pool of codon-denerate oligos is hybridized to a uracil-doped template, gaps between oligos are closed via non-strand-displacing polymerase, and the backbone sealed. Uracil-doped template is degraded to enrich for mutants. After mutagenesis, Gateway attB sites are added, followed by BP+LR cloning into barcoded vectors and transformation into bacteria. Finally, colonies are picked and arrayed. (Incl. illustration by~\cite{pire_stack_2012})}
+	\caption{POPCode mutagenesis and library generation. A pool of codon-denerate oligos is hybridized to a uracil-doped template, gaps between oligos are closed via non-strand-displacing polymerase, and the backbone sealed. Uracil-doped template is degraded to enrich for mutants. After mutagenesis, Gateway attB sites are added, followed by BP+LR cloning into barcoded vectors and transformation into bacteria. Finally, colonies are picked and arrayed.}
 	\label{fig:popcode_schema}
 \end{figure}
 
