--- a/thesis.bib
+++ b/thesis.bib
@@ -303,7 +303,7 @@ A method that identifies pairs of proteins that are 8 nanometers apart produces 
 	pmid = {18467557},
 	pages = {1465--1470},
 	annote = {PCA DHFR PPI assay},
-	file = {Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/3XGM94MM/1465.html:text/html}
+	file = {Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/3XGM94MM/1465.html:text/html;Tarassov et al. - 2008 - An in Vivo Map of the Yeast Protein Interactome.pdf:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/5P566D4W/Tarassov et al. - 2008 - An in Vivo Map of the Yeast Protein Interactome.pdf:application/pdf}
 }
 
 @article{the_uniprot_consortium_uniprot:_2015,
@@ -716,7 +716,7 @@ Genome-editing technology allows improved positive or negative selection screens
 	pmid = {24336569},
 	pages = {80--84},
 	annote = {crispr screen},
-	file = {Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/JXVJEMXT/80.html:text/html}
+	file = {Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/JXVJEMXT/80.html:text/html;Wang et al. - 2014 - Genetic Screens in Human Cells Using the CRISPR-Ca.pdf:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/RZDRBSC5/Wang et al. - 2014 - Genetic Screens in Human Cells Using the CRISPR-Ca.pdf:application/pdf}
 }
 
 @article{altschul_basic_1990,
@@ -770,7 +770,7 @@ Genome-editing technology allows improved positive or negative selection screens
 	year = {2001},
 	pages = {1114--1119},
 	annote = {MAPPIT},
-	file = {Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/QBX2GGW6/ncb1201-1114.html:text/html}
+	file = {ncb1201-1114.pdf:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/9V7W9TGC/ncb1201-1114.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/QBX2GGW6/ncb1201-1114.html:text/html}
 }
 
 @article{schlinkmann_critical_2012,
@@ -807,7 +807,7 @@ Genome-editing technology allows improved positive or negative selection screens
 	year = {1987},
 	pages = {31--35},
 	annote = {Yeast complementation},
-	file = {Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/P3NKWX83/327031a0.html:text/html}
+	file = {Lee and Nurse - 1987 - Complementation used to clone a human homologue of.pdf:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/42S72MGK/Lee and Nurse - 1987 - Complementation used to clone a human homologue of.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/P3NKWX83/327031a0.html:text/html}
 }
 
 @article{nacerddine_sumo_2005,
@@ -1613,6 +1613,7 @@ How disease-associated mutations impair protein activities in the context of bio
 	language = {en},
 	number = {10},
 	urldate = {2017-02-06},
+	journal = {Molecular Biosystems},
 	author = {Ernst, Andreas and Gfeller, David and Kan, Zhengyan and Seshagiri, Somasekar and Kim, Philip M. and Bader, Gary D. and Sidhu, Sachdev S.},
 	month = oct,
 	year = {2010},
@@ -1991,7 +1992,7 @@ Conclusions—Human calmodulin mutations disrupt calcium ion binding to the prot
 	month = jul,
 	year = {1989},
 	pages = {245--246},
-	file = {Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/4MIQ9ZCJ/340245a0.html:text/html}
+	file = {fields1989.pdf:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/WXIKKKKZ/fields1989.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/4MIQ9ZCJ/340245a0.html:text/html}
 }
 
 @article{timm_crystal_2001,
@@ -2362,7 +2363,8 @@ Genes in the same pathway can retain their function in organisms separated by a 
 	pmid = {11283351},
 	pmcid = {PMC31875},
 	keywords = {Fungal Proteins, Genome, Fungal, Protein Binding, Saccharomyces cerevisiae, Two-Hybrid System Techniques},
-	pages = {4569--4574}
+	pages = {4569--4574},
+	file = {Ito et al. - 2001 - A comprehensive two-hybrid analysis to explore the.pdf:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/KU42WUSJ/Ito et al. - 2001 - A comprehensive two-hybrid analysis to explore the.pdf:application/pdf}
 }
 
 @article{uetz_comprehensive_2000,
@@ -2379,7 +2381,8 @@ Genes in the same pathway can retain their function in organisms separated by a 
 	year = {2000},
 	pmid = {10688190},
 	keywords = {Fungal Proteins, Open Reading Frames, Peptide Library, Protein Binding, Protein Structure, Tertiary, Saccharomyces cerevisiae, Two-Hybrid System Techniques},
-	pages = {623--627}
+	pages = {623--627},
+	file = {Uetz et al. - 2000 - A comprehensive analysis of protein-protein intera.pdf:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/6TQTT8UJ/Uetz et al. - 2000 - A comprehensive analysis of protein-protein intera.pdf:application/pdf}
 }
 
 @article{yu_high_2008,
@@ -2919,4 +2922,61 @@ Barcode Fusion Genetics (BFG) enables phenotypic analysis of millions of strains
 	url = {http://thedude.com/wp-content/uploads/2012/01/microtiter-platex21x3_gold.png},
 	author = {Pire, Jim},
 	year = {2012}
+}
+
+@article{sorensen_calmodulin_2013,
+	title = {Calmodulin in a {Heartbeat}},
+	volume = {280},
+	issn = {1742-4658},
+	url = {http://onlinelibrary.wiley.com/doi/10.1111/febs.12337/abstract},
+	doi = {10.1111/febs.12337},
+	abstract = {Calmodulin is the primary sensor of intracellular calcium (Ca2+) levels in eukaryotic cells playing a key role in the proper deciphering of Ca2+ signalling. Given the versatility of Ca2+ as a secondary messenger, it is not surprising that calmodulin interacts with a vast number of proteins. Calmodulin is an extraordinarily conserved protein, which has not evolved since the genesis of the vertebrate lineage, and further is encoded by three different non-allelic genes in the human genome. The protein displays a high degree of conformational plasticity, allowing for target proteins to evolve specific modes of calmodulin interaction and regulation during Ca2+ sensing. The recent identification of two calmodulin mutations giving rise to a heart arrhythmia with catecholaminergic polymorphic ventricular tachycardia-like symptoms and sudden cardiac death in young individuals, and the following identification of another three calmodulin mutations linked to recurrent cardiac arrest in infants, is in many ways intriguing. How can mutations result in cardiac-specific phenotypes when calmodulin is fundamental for correct Ca2+ signal interpretation in virtually all cells in vertebrate organisms? Are there specific cardiac target protein interactions that are affected by these mutations? Another challenge is to elucidate how one mutated allele out of six encoding an identical calmodulin protein results in a dominant phenotype. Here we aim to give an overview of components in the cardiac contraction cycle whose function is modulated by calmodulin. In principle, these may all be implicated in the pathogenic molecular mechanism linking calmodulin mutations to cardiac arrhythmia and sudden cardiac death.},
+	language = {en},
+	number = {21},
+	urldate = {2017-06-01},
+	journal = {FEBS Journal},
+	author = {Sorensen, Anders B. and Søndergaard, Mads T. and Overgaard, Michael T.},
+	month = nov,
+	year = {2013},
+	keywords = {arrhythmia, calcium signalling, Calmodulin, cardiomyocyte, disease mutation},
+	pages = {5511--5532},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/ZMECMTBW/Sorensen et al. - 2013 - Calmodulin in a Heartbeat.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/6K4GBJRW/abstract.html:text/html}
+}
+
+@article{xiong_lobe-dependent_2002,
+	title = {Lobe-dependent {Regulation} of {Ryanodine} {Receptor} {Type} 1 by {Calmodulin}},
+	volume = {277},
+	issn = {0021-9258, 1083-351X},
+	url = {http://www.jbc.org/content/277/43/40862},
+	doi = {10.1074/jbc.M206763200},
+	abstract = {Calmodulin activates the skeletal muscle Ca2+ release channel RYR1 at nmCa2+ concentrations and inhibits the channel at μm Ca2+ concentrations. Using a deletion mutant of calmodulin, we demonstrate that amino acids 2–8 are required for high affinity binding of calmodulin to RYR1 at both nmand μm Ca2+ concentrations and are required for maximum inhibition of the channel at μmCa2+ concentrations. In contrast, the addition of three amino acids to the N terminus of calmodulin increased the affinity for RYR1 at both nm and μm Ca2+concentrations, but destroyed its functional effects on RYR1 at nm Ca2+. Using both full-length RYR1 and synthetic peptides, we demonstrate that the calmodulin-binding site on RYR1 is likely to be noncontiguous, with the C-terminal lobe of both apocalmodulin and Ca2+-calmodulin binding to amino acids between positions 3614 and 3643 and the N-terminal lobe binding at sites that are not proximal in the primary sequence. Ca2+binding to the C-terminal lobe of calmodulin converted it from an activator to an inhibitor, but an interaction with the N-terminal lobe was required for a maximum effect on RYR1. This interaction apparently depends on the native sequence or structure of the first few amino acids at the N terminus of calmodulin.},
+	language = {en},
+	number = {43},
+	urldate = {2017-06-01},
+	journal = {Journal of Biological Chemistry},
+	author = {Xiong, Liang-Wen and Newman, Rhonda A. and Rodney, George G. and Thomas, Oluwatoyin and Zhang, Jia-Zheng and Persechini, Anthony and Shea, Madeline A. and Hamilton, Susan L.},
+	month = oct,
+	year = {2002},
+	pmid = {12185083},
+	pages = {40862--40870},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/ME85AF2V/Xiong et al. - 2002 - Lobe-dependent Regulation of Ryanodine Receptor Ty.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/PTBJCNJZ/40862.html:text/html}
+}
+
+@article{boucher_quantifying_2016,
+	title = {Quantifying and understanding the fitness effects of protein mutations: {Laboratory} versus nature},
+	volume = {25},
+	issn = {1469-896X},
+	shorttitle = {Quantifying and understanding the fitness effects of protein mutations},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/pro.2928/abstract},
+	doi = {10.1002/pro.2928},
+	abstract = {The last decade has seen a growing number of experiments aimed at systematically mapping the effects of mutations in different proteins, and of attempting to correlate their biophysical and biochemical effects with organismal fitness. While insightful, systematic laboratory measurements of fitness effects present challenges and difficulties. Here, we discuss the limitations associated with such measurements, and in particular the challenge of correlating the effects of mutations at the single protein level (“protein fitness”) with their effects on organismal fitness. A variety of experimental setups are used, with some measuring the direct effects on protein function and others monitoring the growth rate of a model organism carrying the protein mutants. The manners by which fitness effects are calculated and presented also vary, and the conclusions, including the derived distributions of fitness effects of mutations, vary accordingly. The comparison of the effects of mutations in the laboratory to the natural protein diversity, namely to amino acid changes that have fixed in the course of millions of years of evolution, is also debatable. The results of laboratory experiments may, therefore, be less relevant to understanding long-term inter-species variations yet insightful with regard to short-term polymorphism, for example, in the study of the effects of human SNPs.},
+	language = {en},
+	number = {7},
+	journal = {Protein Science},
+	author = {Boucher, Jeffrey I. and Bolon, Daniel N. A. and Tawfik, Dan S.},
+	month = jul,
+	year = {2016},
+	keywords = {mutational scan, polymorphism, protein evolution, SNP, systematic mutational mapping},
+	pages = {1219--1226},
+	file = {boucher2016.pdf:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/ZGBGAXJM/boucher2016.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/MI4WSMZA/abstract.html:text/html}
 }
